--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Sodoku Solver</title>
+        <title>Sudoku Solver</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles.css">
@@ -17,7 +17,7 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <div id="puzzle"></div> 
-        <button id="solve-button">Solve</button>
+        <button id="solve-button">Resolver</button>
 
         <p id="solution">Esperando solução</p>
         <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
